--- a/Ahorcado/index.html
+++ b/Ahorcado/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahorcado</title>
     <!--Script-->
-    <script src="/js/palabras.js" defer></script>
-    <script src="/js/script.js" defer></script>
+    <script src="js/palabras.js" defer></script>
+    <script src="js/script.js" defer></script>
     <!--Styles-->
     <link rel="stylesheet" href="css/styles.css" media="screen and (min-width: 425px)">
     <!--Fuentes-->
