--- a/Hamburguesas/index.html
+++ b/Hamburguesas/index.html
@@ -19,13 +19,13 @@
     <div class="container">
         <div class="selectores">
             <select onchange="idioma()" id="cambiarIdioma" class="form-select" name="select">
-                <option value="seleccionar idioma">Seleccionar Idioma</option>
+                <option disabled selected>Seleccionar Idioma</option>
                 <option value="ingles" id="idioma1">Inglés</option>
                 <option value="español" id="idioma2">Español</option>
             </select>
     
             <select  onchange="cambiarTema()" class="form-select" name="select" id="select">
-                <option value="seleccionar tema">Seleccionar Tema</option>
+                <option disabled selected>Seleccionar Tema</option>
                 <option class="noche" value="oscuro">Oscuro</option>
                 <option class="dia" value="claro">Claro</option>
                 <option class="neutro" value="rosa">Rosa</option>
