--- a/Hamburguesas/index.html
+++ b/Hamburguesas/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburguesas</title>
     <!--Favicon-->
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <!--Styles-->
-    <link id="temaEstilo" rel="stylesheet" href="/css/styles.css" media="screen and (min-width: 425px)">
+    <link id="temaEstilo" rel="stylesheet" href="css/styles.css" media="screen and (min-width: 425px)">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--JavaScript-->
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-1.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-1.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$8.900</h2>
                         <h1>BBQ Crunch</h1>
@@ -47,7 +47,7 @@
     
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-2.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-2.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$15.900</h2>
                         <h1>Kentucky Sandwich</h1>
@@ -59,7 +59,7 @@
 
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-3.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-3.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$15.900</h2>
                         <h1>Combo BBQ Crunch</h1>
@@ -71,7 +71,7 @@
     
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-4.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-4.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$16.900</h2>
                         <h1>Kentucky Coronel Sandwich</h1>
@@ -83,7 +83,7 @@
 
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-5.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-5.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$21.900</h2>
                         <h1>Combo Kentucky Sandwich</h1>
@@ -95,7 +95,7 @@
 
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-6.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-6.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$22.900</h2>
                         <h1>Combo Kentucky Coronel Sandwich</h1>
@@ -107,7 +107,7 @@
 
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-7.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-7.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$23.900</h2>
                         <h1>Sandwich Crispy BBQ</h1>
@@ -119,7 +119,7 @@
 
             <div class="contenedor col-md-3">
                 <div class="card h-100">
-                    <img src="/assets/images/hamburguesa-8.webp" alt="imagen1">
+                    <img src="assets/images/hamburguesa-8.webp" alt="imagen1">
                     <div class="card-body d-flex flex-column">
                         <h2>$29.900</h2>
                         <h1>Combo Sandwich Crispy BBQ</h1>
