Cambios en links

--- a/Hogwarts_con_html/index.html
+++ b/Hogwarts_con_html/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hogwarts</title>
     <!--Script-->
-    <script src="/app.js" defer></script>
+    <script src="app.js" defer></script>
     <!--Styles-->
-    <link rel="stylesheet" href="/css/styles.css" media="screen and (min-width: 425px)">
+    <link rel="stylesheet" href="css/styles.css" media="screen and (min-width: 425px)">
     <!--Favicon-->
-    <link rel="shortcut icon" href="/assets/images/icons8-harry-potter-100.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/icons8-harry-potter-100.png" type="image/x-icon">
 </head>
 <body>
-    <img src="/assets/images/HogwartsLogo.png" alt="Hogwarts">
-    <audio autoplay src="/assets/y2mate.com - harry potter musica.mp3"></audio>
+    <img src="assets/images/HogwartsLogo.png" alt="Hogwarts">
+    <audio autoplay src="assets/y2mate.com - harry potter musica.mp3"></audio>
     <div class="title">
         <h1>Hogwarts</h1>
     </div>
