--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -22,6 +22,13 @@
     
                 <label  for="text">Contraseña</label>
                 <input class="form-control" id="contraseña" type="password" name="password" id="password" placeholder="contraseña">
+
+<!--                 <label for="text">Género</label>
+                <select name="select" id="select">
+                    <option value="seleccione">selecceione...</option>
+                    <option value="mujer">mujer</option>
+                    <option value="hombre">hombre</option>
+                </select> -->
     
                 <button class="boton" onclick="iniciarSesion()" type="button">Iniciar Sesión</button>
             </div>
